# amazon-orders

./:  .gitattributes  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  label-commenter-config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  enhancement.yml  feature-request.md  feature-request.yml
.github/workflows/: build.yml  deploy.yml  integration.yml  nightly.yml  release-trigger.yml  release.yml  stale.yml  validate.yml  weekly.yml
amazonorders/: __init__.py  auth.py  banner.txt  canada.py  cli.py  conf.py  constants.py  constants_au.py  exception.py  forms.py  localization.py  orders.py  parser.py  selectors.py  session.py  transactions.py  util.py
amazonorders/captcha/: __init__.py  base.py  twocaptcha.py
amazonorders/contrib/captcha/: anticaptcha.py  base.py  capsolver.py  twocaptcha.py
amazonorders/contrib/waf/: anticaptcha.py  base.py  capsolver.py  twocaptcha.py
amazonorders/entity/: address.py  item.py  order.py  parsable.py  recipient.py  seller.py  shipment.py  transaction.py
amazonorders/lib/: transactions.py
amazonorders/page/: orderhistory.py
docs/: amazon_australia.md  api.rst  captcha.rst  conf.py  index.html  index.rst  requirements.txt  troubleshooting.rst  waf.rst
docs/_html/: robots.txt  sitemap-index.xml
docs/_templates/: layout.html  sidebartoc.html  usefullinks.html
scripts/: build-test-resources.py
tests/: _auth_form_stubs.py  integrationtestcase.py  test_auth.py  test_cli.py  test_conf.py  test_integration.py  test_integration_generic.py  test_integration_json.py  test_orders.py  test_parser.py  test_session.py  test_transactions.py  test_util.py  testcase.py  unittestcase.py
tests/entity/: test_item.py  test_order.py  test_parsable.py  test_transaction.py
tests/integration/: test_integration.py  test_integration_auth.py  test_integration_generic.py  test_integration_json.py
tests/integration/private-resources/: details-112-6539663-7312263.json  details-112-9685975-5907428.json  example-details-112-6539663-7312263.json  example-history-112-6539663-7312263.json  history-112-6539663-7312263.json
tests/lib/: test_transactions.py
tests/private-resources/: details-112-9685975-5907428.json  history-112-9685975-5907428.json
tests/resources/: 500.html  new-otp-failed.html  order-details-112-0399923-3070642.html  order-details-112-2961628-4757846.html  order-details-112-4482432-2955442.html  order-details-112-5939971-8962610.html  order-details-112-9685975-5907428.html  order-details-113-1625648-3437067.html  order-details-114-9460922-7737063.html  order-details.html  order-history-2010-0.html  order-history-2010-10.html  order-history-2020-40.html  order-history-2023-10.html  order-history-2024-0.html  orders-pagination-1.html  orders-pagination-2.html  orders.html  post-signin-captcha-1.html  post-signin-captcha-invalid.html  post-signin-invalid-email.html  post-signin-invalid-password.html  post-signin-mfa-invalid-otp.html  post-signin-mfa.html  post-signin-new-otp.html
tests/resources/auth/: claim.html  index.html  intent.html  post-signin-captcha-2.html  post-signin-captcha-3.html  post-signin-captcha-4.html  post-signin-captcha-field-keywords.html  post-signin-captcha-otp.html  post-signin-invalid-email.html  post-signin-js-bot-challenge.html  post-signin-mfa.html  post-signin-new-otp.html  signin-claim.html  signin.html  unauth-bad-index.html  waf-challenge.html
tests/resources/orders/: order-amazon-discount-snippet.html  order-currency-stripped-snippet.html  order-details-111-6778632-7354601.html  order-details-112-0399923-3070642.html  order-details-112-9087159-1657009.html  order-details-112-9685975-5907428.html  order-details-114-8722141-6545058.html  order-details-coupon-savings-multiple.html  order-details-coupon-savings.html  order-details-gift-wrap-snippet.html  order-gift-card-snippet.html  order-history-2018-0.html  order-history-2020-50.html  order-history-2023-10-ten-orders.html  order-history-2023-zero-orders.html  order-history-amazon-store.html  order-history-canceled-order.html  order-history-egift.html  order-history-fresh.html  order-history-wholefoods-catering.html  order-history-wholefoods.html  order-missing-grand-total-snippet.html  order-multibuy-snippet.html  order-promotion-applied-snippet.html  order-subscriptions-and-reward-points-snippet.html  order-summary-D01-9262519-8073835.html
tests/resources/orders/2024/: index_0.html  order-details-701-0006947-3345801.html  order-details-701-0006947-3345801_1.html  order-details-701-0006947-3345801_2.html  order-details-701-0152106-2961052.html  order-details-701-0225082-3958652.html  order-details-701-0298656-0781000.html  order-details-701-0333518-4496241.html  order-details-701-0340939-4241004.html  order-details-701-0384837-0075460.html  order-details-701-0384837-0075460_1.html  order-details-701-0425073-9489802.html  order-details-701-0592501-8946661.html  order-details-701-0609467-2496229.html  order-details-701-0671154-9024203.html  order-details-701-0671154-9024203_1.html  order-details-701-0710718-1301864.html  order-details-701-0812282-3845069.html  order-details-701-0812282-3845069_1.html  (+294 more)
tests/resources/transactions/: get-transactions.html  transaction-form-tag.html  transaction-refund-snippet.html  transaction-snippet.html  transactions-grand-total-blank.html  transactions-in-progress.html  transactions-refunded.html  transactions-with-next-page.html  transactions-zero-transactions.html
tests/unit/: test_captcha.py  test_cli.py  test_conf.py  test_orders.py  test_session.py  test_transactions.py  test_util.py
tests/unit/contrib/: test_anticaptcha.py  test_capsolver.py  test_twocaptcha.py
tests/unit/entity/: test_item.py  test_order.py  test_parsable.py  test_transaction.py
tests/util/: otpprompt.py  smsprompt.py  tinyserver.py
