[project]
name = "amazon-orders"
version = "1.0.10"
description = "A CLI and library for interacting with Amazon order history."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [{ name = "Alex Laird", email = "contact@alexlaird.com" }]
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
    "amazoncaptcha",
    "beautifulsoup4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
amazon-orders = "amazonorders.cli:amazon_orders_cli"

[project.urls]
Changelog = "https://github.com/alexdlaird/amazon-orders-python/blob/main/CHANGELOG.md"
Documentation = "https://amazon-orders.readthedocs.io"
Sponsor = "https://github.com/sponsors/alexdlaird"
"Source Code" = "https://github.com/alexdlaird/amazon-orders-python"

[tool.coverage.run]
omit = [
    "venv/**",
    "scripts/**",
    "*/tests/**"
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = "_build/coverage/coverage.xml"

[tool.coverage.html]
title = "Coverage Report"
directory = "_build/coverage"